force-app/main/default/objects/tc9_pr__Community_Settings__mdt/tc9_pr__Community_Settings__mdt.object-meta.xml
<CustomObject>
    <description>To be used in defining information used in creating community users and approver link tokens</description>
    <label>Community Settings</label>
    <pluralLabel>Community Settings</pluralLabel>
</CustomObject>