force-app/main/default/objects/tc9_pr__Community_Settings__mdt/fields/tc9_pr__Community_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Community_Base_URL__c</fullName>
    <description>To specify the base URL for the community</description>
    <inlineHelpText>To specify the base URL for the community</inlineHelpText>
    <label>Community Base URL</label>
    <type>Url</type>
</CustomField>