force-app/main/default/objects/tc9_pr__Community_Settings__mdt/fields/tc9_pr__Community_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Community_Picklist_Value__c</fullName>
    <description>The corresponding value used in the Employee Community and Approver Community picklists</description>
    <inlineHelpText>The corresponding value used in the Employee Community and Approver Community picklists</inlineHelpText>
    <label>Community Picklist Value</label>
    <length>40</length>
    <type>Text</type>
</CustomField>