force-app/main/default/objects/tc9_pr__Community_Settings__mdt/fields/tc9_pr__Community_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Community_Profile_Name__c</fullName>
    <description>The specific community profile name is used in conjunction with the Auto Create Employee Community User field on the Payment Entity. Enter the Profile type that is used by the Employee.</description>
    <inlineHelpText>The specific community profile name is used in conjunction with the Auto Create Employee Community User field on the Payment Entity. Enter the Profile type that is used by the Employee.</inlineHelpText>
    <label>Community Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>