force-app/main/default/objects/tc9_pr__Community_Settings__mdt/fields/tc9_pr__Default_Approver_Community__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Default_Approver_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To specify if the community will be used as the default Approver Community in the event the Approver Community field is not populated on the Contact record</description>
    <inlineHelpText>To specify if the community will be used as the default Approver Community in the event the Approver Community field is not populated on the Contact record</inlineHelpText>
    <label>Default Approver Community</label>
    <type>Checkbox</type>
</CustomField>