force-app/main/default/objects/tc9_pr__Community_Settings__mdt/fields/tc9_pr__Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Permission_Sets__c</fullName>
    <defaultValue>&quot;tc9_ec__Employee_Community_Permission_Set&quot;</defaultValue>
    <description>Defines the API name of the Permission Set(s) that will be assigned when Users are created automatically for the Community. Multiple permission sets can be defined when separated by a comma (,)</description>
    <inlineHelpText>Defines the API name of the Permission Set(s) that will be assigned when Users are created automatically for the Community. Multiple permission sets can be defined when separated by a comma (,)</inlineHelpText>
    <label>Permission Sets</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>